Several small fixes:
- fix "body scrolled" class on older browsers
- add moz-prefixes to logo transform
- fix viewport nesting issue in header
- fix overlapping (by 1px :) media query in team section
- upgrade grunt-sass (to no visible effect, though)

--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -171,19 +171,22 @@ header {
                     width: 260px;
                     height: 120px;
                     -webkit-transform: translateY(-50%);
+                    -moz-transform: translateY(-50%);
                     -ms-transform: translateY(-50%);
                     transform: translateY(-50%);
 
                     .minified-header & { // collapse the logo to its smaller size when scrolled down
                         -webkit-transform: translateY(-50%) scale(0.4);
+                        -moz-transform: translateY(-50%) scale(0.4);
                         -ms-transform: translateY(-50%) scale(0.4);
                         transform: translateY(-50%) scale(0.4);
                     }
-                    @include viewports(fluid fluid-) { // ...or when in fluid layout mode
-                        -webkit-transform: translateY(-50%) scale(0.4);
-                        -ms-transform: translateY(-50%) scale(0.4);
-                        transform: translateY(-50%) scale(0.4);
-                    }
+                }
+                @include viewports(fluid fluid-) { // ...or when in fluid layout mode
+                    -webkit-transform: translateY(-50%) scale(0.4);
+                    -moz-transform: translateY(-50%) scale(0.4);
+                    -ms-transform: translateY(-50%) scale(0.4);
+                    transform: translateY(-50%) scale(0.4);
                 }
             }
         }
