--- a/app/styles/_sec-team.scss
+++ b/app/styles/_sec-team.scss
@@ -23,7 +23,7 @@ section#team {
             height: 200px;
             margin-top: 70px;
 
-             @media (max-width: 1300px) and (min-width: 1024px) {
+             @media (max-width: 1300px) and (min-width: 1025px) {
 
                  &:nth-child(1),
                  &:nth-child(2),
